<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">愛說故事小熊</string>
    <string name="login">登入</string>
    <string name="FBlogin">Facebook登入</string>
    <string name="password">密碼</string>
    <string name="repassword">請再輸入一次密碼</string>
    <string name="account">帳號</string>
    <string name="account_hint">輸入電子郵件/手機門號</string>
    <string name="title_blog">專欄</string>
    <string name="title_play">哪玩</string>
    <string name="title_story">故事</string>
    <string name="title_buy">購物</string>
    <string name="title_me">會員</string>
    <string name="spinner_prompt_city">請選擇所在縣市</string>
    <string name="spinner_prompt_district">請選擇所在鄉鎮區市</string>
    <string name="spinner_prompt_userclass">請選擇身份類別</string>
    <string name="spinner_prompt_eventclasss">請選擇活動類別</string>
    <string name="love">母愛</string>
    <string name="storySponsor">廠商贊助</string>
    <string name="myStory">我的故事</string>
    <string name="history">最近播放</string>
    <string name="storyScenes">播放場景</string>
    <string name="loveStory">故事收藏</string>
    <string name="classArticle">文章分類</string>
    <string name="hotblog">熱門專欄</string>
    <string name="storySearch">搜尋故事</string>
    <string name="attractions">景點</string>
    <string name="attractionLBS">附近景點</string>
    <string name="attractionSearch">搜尋景點</string>
    <string name="attractionLove">收藏景點</string>
    <string name="attractionAdd">新增景點</string>
    <string name="attractionNew">最新景點</string>
    <string name="attractionSponsor">景點推播</string>
    <string name="events">活動</string>
    <string name="eventLBS">附近活動</string>
    <string name="eventSearch">搜尋活動</string>
    <string name="eventLove">收藏活動</string>
    <string name="eventAdd">新增活動</string>
    <string name="eventNew">最新活動</string>
    <string name="eventSponsor">活動推播</string>
    <string name="Search">搜尋</string>
    <string name="Love">收藏</string>
    <string name="New">最新</string>
    <string name="Sponsor">推播</string>
    <string name="author_clause">
    親愛的使用者您好\n\n

    我們竭誠歡迎您使用「愛說故事小熊」（以下稱本平台）。為保障您的權益，使用本平台服務前，請務必詳細閱讀並配合以下之使用規範：\n\n

        第一條 平台設立宗旨\n
    為給小孩子一個快樂的童年及方便父母陪伴小孩，促進兒童文學發展，我們設立本平台，藉以向社會大眾徵集適合兒童聆聽之故事創作，以推廣故事創作。\n\n

        第二條 會員類型\n
    一、一般會員\n
    本平台提供「一般民眾」、「出版社」或「故事創作者」免費註冊成為「一般會員」；以一般會員身分登入本平台，得享有下列平台服務：\n
    瀏覽本平台所展示之各故事創作，並得對喜愛的創作品按｢愛心｣收藏、評星等、付費收聽，以及使用｢討論區｣參與討論。\n
    擁有故事創作版權之原作者、出版社或其他版權擁有者，可向本平台進行提案，並成為「故事版權會員」。\n

    二、故事版權會員\n
    版權會員需確保自己提案上傳之作品無侵害他人之智慧財產權，如有侵權疑慮，本平台將會把該作品先行下架並待處理。\n
    任何人向本平台進行版權故事提案後，並經審查上架後，均成為「故事版權會員」，得享有下列平台服務：\n
    瀏覽自己的創作故事之狀態，並且照規定比率取得版稅拆分，版稅撥款匯出將扣除匯款手續費及必要之政府稅金。\n
    版稅率為30% ，暢銷作家及特殊個案則另以簽約內容為主。\n\n

        第三條 會員註冊與登入\n
    當您完成註冊後，即視為您已閱讀、暸解並同意本規範之全部內容。若您為未成年人，應由您的法定代理人閱讀、暸解並同意本規範之全部內容。\n
    本平台提供兩種會員註冊方式，請您擇一選擇適合您的註冊方式：\n
    一、Facebook帳號快速註冊登入：\n
    以Facebook帳號快速註冊成為會員，並同意本平台存取您公開的個人檔案、電子郵件帳戶資料後，即得登入使用本平台之服務。\n
    二、於本平台內註冊登入：\n
    使用者提供個人基本資料向本平台申請會員帳戶，註冊成功後，即可輸入帳戶密碼登入本平台。\n
    第四條 會員協力義務\n
    會員應確保註冊資料完整且真實，如經發現資料不實或不完整，本平台有權要求您補正，或終止對您的服務。若因會員註冊資料不真實或不完整而損失權益，本平台不負相關責任。\n
    會員資料如有變動者，會員應即時更新。因資料未更新而損失權益者，本平台不負相關責任。\n
    會員不得將帳號、密碼轉讓或出借他人，如因此所生之一切損失，本平台不負賠償之責。\n
    會員帳號、密碼如遭他人非法使用時，應立即通知本平台，由本平台協助處理。因帳戶密碼遭他人非法使用所生之一切損失，本平台不負任何賠償責任。\n
    會員操作本平台提供的介面應合於中華民國法令之相關規定，不得有妨礙資安等情事。因非法行為所產生之任何風險，行為人應自負相關法律責任。\n
    會員於本平台內發表之言論，不論為公開或非公開，均應自負責任。有下列情形者，本平台有權刪除您的言論，並終止對您的 服務：\n
    ﹙一﹚侵害他人之智慧財產權、人格權、隱私權或其他權利。\n
    ﹙二﹚內容構成犯罪或煽惑他人犯罪。\n
    ﹙三﹚內容涉及歧視性、猥褻、性暗示、侮辱、誹謗、攻擊性或其他違反公共秩序、善良風俗之內容。\n
    ﹙四）內容或連結與本平台服務之內容無正當合理關聯者。\n
    ﹙五﹚其他一切違法、不正當或不適當之內容。\n\n

        第五條 隱私權政策\n
    本平台與會員成立契約關係，本平台將因建立會員基本資料、驗證身分、活動通知、訊息聯繫、數據分析及平台管理之必要，而蒐集、處理或利用會員的個人資料，並依據中華民國個人資料保護法之規定予以保護。\n
    會員充分瞭解並同意本平台、關係企業或委外管理本平台之企業，依前項規定，於必要範圍內蒐集、處理或利用個人資料。\n
    會員使用本平台有關第三方服務之部分，將可能因第三方服務之要求，而必須提供個人資料予第三方，於此情形而需蒐集、處 理或利用個人資料之主體即為該第三方，應依該第三方之隱私權政策處理。\n
    本平台有權但無義務於使用者註銷資格屆滿五年後，刪除所蒐集之各項個人資料。\n
    因司法或行政機關之要求，或因緊急情況而為保障本平台、其他使用者或公眾安全、公共利益時，會員同意本平台得利用會員 留存之個人資料或使用紀錄。\n\n

        第六條 第三方連結與外部廣告\n
    會員充分瞭解並同意本平台服務內容包括：代刊登第三方連結或廣告、代轉介協力廠商之服務。會員於點選或接受第三方服務，或與之訂立契約，乃純屬會員與第三方間之權利義務關係，如因而產生糾紛，會員應與第三方自行協調，本平台不對任一方負擔保、協調、代追償、協助訴訟或賠償等責任。\n\n

        第七條 智慧財產權政策\n
    本平台所提供之所有文字、圖片、影音、服務、活動或其他一切素材，其智慧財產權均由本平台或原作者所享有，不因本平台之服務而移轉為會員所有。\n
    本平台所提供之所有文字、圖片、影音、服務、活動或其他一切素材，非經本平台或原作者之同意，不得任意轉載分享，亦不得擅自重製、抄襲、編輯、仿作、傳輸、播送、銷售或其他從事商業之行為。\n\n

        第八條 平台管理服務\n
    一.服務內容調整：\n
    本平台有權基於平台管理、營運或其他正當合法考量，暫時或永久調整部分或全部之服務。\n
    二.停權事由：\n
    本平台有權基於平台管理或其他正當合法考量，將違反本使用規範或法令規定之會員，予以凍結帳號，停止其使用權限；如涉有違法情事，本平台將採取其他必要措施，並將事證移送司法或行政機關調查。\n
    三.資料保存：\n
    本平台不保證永久留存所有資料，因此，請使用者就所發表之內容自行備份，避免遺失。\n
    四.更新服務：\n
    本平台得隨時進行平台服務內容或介面之更新，並可能自動升級平台服務版本。\n
    五.檢舉：\n
    若認為本平台提供之服務涉及侵犯智慧財產權或其他法令者，敬請通知客服信箱(dean.i.chi@gmail.com)，並附上相關證明與聯繫方式，本平台將盡速處理，並將處理情形回覆檢舉者。\n\n

        第九條 規範增訂與修改\n
    本平台有權隨時修改本使用規範，如本使用規範有增修之情形，將於本平台公告發布，並自公告發布之日起生效。\n\n

        第十條 其他約定\n
    本平台由愛說故事小熊股份有限公司(下稱本公司)營運，並負擔相關權利義務。\n
    本使用規範為「一般會員」、「故事版權會員」與本公司間之契約，若使用規範有未詳盡之處，悉依中華民國法令之規定。\n
    因本平台服務所生之一切爭議，使用者同意先與本公司友好協商，協商不成者，同意以中華民國法令為準據法，並以臺灣士林地方法院為第一審管轄法院。\n"
    </string>
    <string name="russell_punter"><u>Russell Punter</u></string>
    <string name="tr_James"><u>Tr.James</u></string>
    <string name="story2">
        <u><b>THE INCH PRINCE</b></u>\n\n
    Once upon a time, there was a little old man and woman.\n\n
    Hey had everything they wanted, except for a child.\n\n
    One day, a fairy flew by. “These people are kind, so I’ll be kind to them.”\n\n
    She waved her wand and sang some magic words. “Jumping beans and flying fish, give these folks their dearest wish.”\n\n
    Soon, they had a little boy. In fact, he was just one inch tall. Let’s call him Issy. It means ‘one inch boy‘.\n\n
    Issy never grew bigger. He had a bottle top for a bathtub, and a matchbox for a bed.\n\n
    Many years later, it was time for Issy to leave home. He wanted to ask the emperor for a job.\n\n
    A guard was standing outside the palace.\n\n
    “I’d like a job,” said Issy.\n\n
    “You’re tiny. What can you do?”\n\n
    “Well, I can run past you,” Issy quickly ran past him into the palace.\n\n
    A maid was washing clothes.\n\n
    “I’d like a job,” said Issy.\n\n
    “You’re tiny. What can you do?”\n\n
    “Well, I can run past you.” Issy quickly ran past her into the throne room.\n\n
    He bowed to the emperor and the princess. “I’d like a job, please, Your Majesty.”\n\n
    “He’s so tiny, Daddy. What can he do?” said the princess.\n\n
    “Hmm,” said the emperor. “You can look after Princess Chi-Chi. Small things can be special too.\n\n
    From then on, Issy never left her side. One day, they were walking near a dark forest. Just then, there was a loud roar.\n\n
    “RAAAGGGHH!” A giant ogre crashed through the trees and tried to grab the princess.\n\n
    Issy quickly took his needle-sword and pricked the ogre’s tongue.\n\n
    “Oooowwww!” cried the ogre and ran off.\n\n
    “Thank you, Issy,” said the princess.\n\n
    “Look, the ogre left his hammer behind."\n\n
    She tried to pick it up, but it was too heavy.\n\n
    “I wish you were bigger, Issy. "Then maybe you could lift it.\n\n
    Suddenly, Issy began to grow bigger and bigger.\n\n
    “I’m as tall as you,” said Issy. \n\n
    The hammer granted your wish.\n\n
    The princess fell in love with Issy, not because he was tall, but because he was brave.\n\n
    hey got married and lived in a house next to the palace.\n\n
    The house was small, but Prince Issy and Princess Chi-Chi were happy.\n\n
    They both knew that small things can be special too.
    </string>
    <string name="story3">
    孤單的毛毛蟲\n
    (關於手足相處、母愛、生態教育)\n\n

    一個美麗的清晨，有一顆小小的蛋，在一片翠嫩可口的樹葉上。\n\n

    過了一會，啵一聲，蛋裂了一個小洞，一隻小毛毛蟲從裡面伸出他的頭。\n\n

    小毛毛蟲爬出蛋殼，伸伸懶腰，把蛋殼吃掉，這是他的第一餐，吃完後他很開心地休息一下。\n\n

    小毛毛蟲，接著開始吃樹葉，吃完一片又一片，不久他長大了，脫掉一次的皮，他好開心。\n\n

    可是當他爬到另一枝樹枝，遇到了小瓢蟲兄弟，小毛毛蟲看著他們一起玩，他突然覺得自己好孤單，沒有兄弟姐妹可以一起玩。\n\n

    小毛毛蟲因為很難過，所以沒胃口吃樹葉，自己待在樹葉上發呆。\n\n

    他所在的那片樹葉，突然發出啵一聲，裂了一個小洞，有一隻長得很像他的小毛毛蟲從洞裡伸出頭。\n\n

    原來是他的妹妹，雖然他不知道為什麼他妹妹沒在他旁邊出生，但他很珍惜有妹妹可以陪他一起吃樹葉、一起玩、一起唱歌。\n\n

    雖然有時會搶著吃樹葉、有時會吵架，但他們更愛彼此。\n\n

    後來，他們一起結成蛹，不久，他們變成蝴蝶了，原來他們是美麗的紫斑蝶。\n\n

    這時他們才知道，紫斑蝶媽媽把他們生在不同的地方是因為母親的愛。\n\n

    為了讓每隻小毛毛蟲都能有足夠的樹葉吃，而且紫斑蝶出生時會把蛋殼吃掉，如果都生在一起，先出生的小毛毛蟲吃蛋殼時，會不小心把其它的蛋吃掉，所以媽媽很辛苦地把他們生在每一片不同的嫩葉上。\n
    </string>
    <string name="more">更多&#8230;</string>
    <string name="nonPlay">未播放</string>
    <string name="toPlay">邀請</string>
    <string name="articleSearch">搜尋文章</string>
    <string name="articleLove">收藏文章</string>
    <string name="blogLove">關注專欄</string>
    <string name="articleAdd">發表文章</string>
    <string name="friendAdd">加友</string>
    <string name="QnA">問答</string>
    <string name="logout">登出</string>
    <string name="myData">我的會員</string>
    <string name="myNotice">訊息</string>
    <string name="about_iStoryBear">關於愛說故事小熊</string>
    <string name="myEvents">我的活動</string>
    <string name="myChild">我的小孩</string>
    <string name="childData">編輯資料</string>
    <string name="toPoints">版稅兌點</string>
    <string name="buyPoints">點數購買</string>
    <string name="toCash">兌現申請</string>
    <string name="myRoyalty">我的版稅</string>
    <string name="myPoints">我的點數</string>
    <string name="email2We">聯絡我們</string>
    <string name="Terms_of_Service">服務條款與隱私權政策</string>
    <string name="OK">確認</string>
    <string name="cancel">取消</string>
    <string name="keyword">關鍵字</string>
    <string name="storyPromotion">限時優惠</string>
    <string name="blogSearch">搜尋專欄</string>
    <string name="missPassword">忘記密碼</string>
    <string name="newAccount">註冊新帳號</string>
    <string name="welcome">歡迎使用愛說故事小熊</string>
    <string name="welcome2">珍惜您與小孩的美好時光</string>
    <string name="welcome3">陪伴您育兒的最佳平台</string>
    <string name="nickname">別稱:</string>
    <string name="first_name">名字</string>
    <string name="family_name">姓氏</string>
    <string name="username">姓名:</string>
    <string name="email">電郵:</string>
    <string name="pw">密碼:</string>
    <string name="mobile">手機:</string>
    <string name="address">居住地:</string>
    <string name="userClass">身份:</string>
    <string name="NULL">無</string>
    <string name="starRating">我的評分</string>
    <string name="chat">討論</string>
    <string name="add_player">邀請</string>
    <string name="overview">介紹:</string>
    <string name="free">免費</string>
    <string name="phone">電話:</string>
    <string name="charges">費用:</string>
    <string name="opening">開放時間:</string>
    <string name="allday">全天開放</string>
    <string name="tag">標籤:</string>
    <string name="website">網址:</string>
    <string name="editor">資料:</string>
    <string name="wiki">維基百科:</string>
    <string name="organizer">主辦:</string>
    <string name="join">參加</string>
    <string name="thinking">考慮</string>
    <string name="refuse">無法出席</string>
    <string name="apply_website">報名網址:</string>
    <string name="event_date">活動時間:</string>
    <string name="location">地點:</string>
    <string name="event_name">活動名稱:</string>
    <string name="Class">類別:</string>
    <string name="open">公開</string>
    <string name="Private">私人</string>
    <string name="up_pic">上傳照片</string>
    <string name="attraction_name">景點名稱:</string>
    <string name="blog">專欄</string>
    <string name="story">故事</string>
    <string name="likeBlog">關注</string>
    <string name="overview2">簡介</string>
    <string name="audience">聽眾</string>
    <string name="up_story">故事上傳</string>
    <string name="story_name">故事名稱:</string>
    <string name="original">原創</string>
    <string name="nonoriginal">非原創</string>
    <string name="nonopening">不公開</string>
    <string name="type">屬性:</string>
    <string name="hint09">為能正確推薦，請輸入正確資料； * 為必填．</string>
    <string name="hint13">輸入限制12個中英字</string>
    <string name="hint14">請輸入活動地址，最多30個中英字\n點右邊地圖可連結景點/地標</string>
    <string name="hint15">請選擇活動時間</string>
    <string name="hint16">請輸入活動費用</string>
    <string name="hint17">請輸入報名網址，本平台不代收費</string>
    <string name="hint18">請輸入聯絡號碼</string>
    <string name="hint19">以#開頭,空白間隔,如 #溜滑梯 #餵魚</string>
    <string name="hint20">請輸入活動內容說明\n最多80個中英字</string>
</resources>