<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/AddEventBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:background="@color/colorStBearBtOrange"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/events" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:text="@string/event_name"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/eventName_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView1"
                android:hint="@string/hint13"
                android:imeOptions="actionNext"
                android:inputType="text|textAutoComplete"
                android:minEms="12"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="10dp"
                android:text="@string/organizer"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/organizerName_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView21"
                android:layout_alignBottom="@+id/textView21"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/textView21"
                android:hint="@string/hint13"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minEms="12"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView21"
                android:layout_below="@+id/textView21"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/organizerName_edit"
                android:text="@string/Class"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <Spinner
                android:id="@+id/eventClass_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:entries="@array/eventClass"
                android:prompt="@string/spinner_prompt_eventclasss" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="0dp"
                android:checked="true"
                android:drawableStart="@drawable/ic_asterisk_red_24dp"
                android:padding="3dp"
                android:showText="true"
                android:text="@string/type"
                android:textOff="@string/Private"
                android:textOn="@string/open"
                android:thumb="@drawable/bg_rectangle_wo_stroke_gold"
                android:thumbTextPadding="12dp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch5"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textStyle="bold"
                android:layout_alignEnd="@+id/textView1"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/location_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignStart="@+id/organizerName_edit"
                android:layout_below="@+id/textView2"
                android:autoLink="map"
                android:gravity="top"
                android:hint="@string/hint14"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textMultiLine|textPostalAddress"
                android:minLines="2"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp" android:layout_toStartOf="@+id/locationBtn" android:layout_toEndOf="@+id/textView3"
                android:autofillHints="" />

            <ImageButton
                android:id="@+id/locationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/textView3"
                android:background="@color/snow"
                app:srcCompat="@drawable/ic_map_black_24dp"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView1"
                android:layout_below="@+id/location_edit"
                android:layout_marginTop="5dp"
                android:text="@string/event_date"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/eventDate_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignEnd="@+id/eventName_edit"
                android:layout_toEndOf="@+id/textView4"
                android:gravity="top"
                android:hint="@string/hint15"
                android:imeOptions="actionNext"
                android:inputType="text|textMultiLine"
                android:minLines="3"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView4"
                android:layout_below="@+id/eventDate_edit"
                android:layout_marginTop="10dp"
                android:text="@string/charges"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/charges_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"

                android:hint="@string/hint16"
                android:imeOptions="actionNext"
                android:inputType="text|textAutoComplete"
                android:text="@string/free"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:layout_alignEnd="@+id/eventName_edit"
                android:layout_toEndOf="@+id/textView5"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView5"
                android:layout_below="@+id/charges_edit"
                android:layout_marginTop="10dp"
                android:text="@string/apply_website"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/wed_address_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/eventName_edit"
                android:layout_below="@+id/charges_edit"
                android:layout_toEndOf="@+id/textView6"
                android:hint="@string/hint17"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textUri"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:layout_alignStart="@+id/eventName_edit"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView6"
                android:layout_below="@+id/wed_address_edit"
                android:layout_marginTop="10dp"
                android:text="@string/phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignEnd="@+id/eventName_edit"
                android:hint="@string/hint18"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|phone"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:layout_alignStart="@+id/eventName_edit"
                android:layout_toEndOf="@+id/textView7"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView7"
                android:layout_below="@+id/mobile_edit"
                android:layout_marginTop="10dp"
                android:text="@string/tag"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/tag_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignEnd="@+id/eventName_edit"
                android:hint="@string/hint19"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:layout_alignStart="@+id/eventName_edit"
                android:layout_toEndOf="@+id/textView8"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView1"
                android:layout_below="@+id/tag_edit"
                android:layout_marginTop="5dp"
                android:text="@string/overview"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_asterisk_red_24dp" />

            <EditText
                android:id="@+id/overview_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView26"
                android:layout_alignBottom="@+id/textView26"
                android:layout_alignEnd="@+id/eventName_edit"
                android:layout_toEndOf="@+id/textView8"
                android:gravity="top"
                android:hint="@string/hint20"
                android:inputType="textAutoComplete|textMultiLine"
                android:minLines="4"
                android:textColor="@android:color/black"
                android:textColorHint="@color/cardview_shadow_start_color"
                android:textSize="14sp"
                android:autofillHints="" />

            <Button
                android:id="@+id/uppPicBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/overview_edit"
                android:drawableTop="@drawable/ic_addphoto_colors_24dp"
                android:text="@string/up_pic" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview_edit"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/gooseYellow"
                android:text="@string/hint09"
                android:textColor="@color/holo_red_light"
                android:textSize="12sp" />

            <Button
                android:id="@+id/OKBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/eventName_edit"
                android:layout_below="@+id/textView18"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/textView1"
                android:background="@color/colorStBearBtOrange"
                android:minHeight="25dp"
                android:text="@android:string/ok"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>